--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -18,7 +18,7 @@
 
 
   "SizeConverter": {
-    "IsEnabled": true,
+    "IsEnabled": false,
     "DeleteAllFSizes": true,
 
     "SaveResult": true,
@@ -196,8 +196,8 @@
 
 
   "ColorConverter": {
-    "IsEnabled": false,
-    "DeleteAllFColours": false,
+    "IsEnabled": true,
+    "DeleteAllFColours": true,
 
     "SaveResult": true,
 
@@ -228,59 +228,131 @@
     ],
 
     "DirectMapping": {
-      "aqua": "blue",
+      "amethyst": "Purple",
+      "aqua ombre": "Blue, Light Blue, Green",
+      "aquamarine": "Blue, Light Blue",
       "bamboo": "Brown, Beige",
+      "blanco": "White",
+      "blonde": "Yellow, Orange, Gold",
+      "blush": "Rose, Pink, Nude, Beige",
+      "brass": "Brown, Gold",
+      "brazilian": "Green, Blue",
       "bronze": "Brown, Gold",
+      "burg": "Black, Blue",
       "burgundy": "Burgundy, Red",
+      "burnt orange": "Orange, Brown",
       "camel": "Brown, Yellow, Beige",
       "cameo rose": "Rose, Pink",
       "canary": "Yellow, Nude, Beige, Orange",
       "caramel": "Orange, Beige, Brown",
-      "charcoal": "black",
+      "carbon": "Grey, Black",
+      "champagne": "Nude, Beige",
       "chestnut aura": "Brown",
-      "chestnut": "brown",
+      "chestnut coffee ombre": "Brown,Beige, Black, Gold",
+      "chestnut": "Brown",
+      "chocolate": "Brown, Beige",
       "clear - peach": "Orange, Yellow",
+      "clear frame - peach lens": "White, Orange",
       "clear frame - violet lens": "White",
       "clear": "White",
-      "coffee": "black",
-      "cognac": "brown",
+      "coffee ombre": "Brown, Black, Beige, Gold",
+      "color": "Black,White, Blue, Green, Yellow",
       "cooper": "Brown",
       "coral": "Rose, Red, Orange, Nude",
+      "cream": "White, Nude, Beige, Yellow",
+      "cubic zirconia": "White, Light Blue, Blue",
+      "denim": "Blue, Light Blue",
+      "dove taupe": "Rose, Nude",
+      "emerald": "Green",
+      "export": "Black, Blue",
+      "fawn": "Brown, Beige",
+      "flame": "Red, Burgundy",
+      "floral shimmer": "Grey, White, Black",
       "fog": "Grey, Black",
+      "full": "Black, Blue",
       "fuschia": "Pink, Purple, Red",
-      "gray": "grey",
+      "gray trio": "Grey, Black",
       "gun/rose": "Rose, Pink",
-      "ivory": "white",
+      "gunmetal - gray": "Grey, Black",
+      "gunmetal foil": "Blue",
+      "gunmetal": "Grey, Black",
+      "herringbone sartorial": "Grey, Blue",
+      "ice": "White, Light Blue",
+      "indian summer": "Orange, Gold, Yellow",
       "kale": "Olive, Green",
+      "kara steel": "Light Blue, Black",
+      "khaki": "Beige, Brown",
+      "lavender": "Purple, Blue, Light Blue",
       "leopard": "Black, Brown, Gold, Orange",
+      "lilac": "Blue, Purple",
+      "liquid forest": "Black, Blue",
       "macaw": "Blue, Light Blue, Green, Yellow",
+      "maltese tiger": "Black, Blue",
+      "maroon": "Red, Rose, Burgundy",
+      "mercury": "Blue",
+      "mink": "Grey, Purple",
       "mint": "Light Blue, Green",
       "moss palm": "Green, Olive",
+      "multi": "Blue, Green, Red, Yellow",
+      "multicolor": "Blue, Green, Red, Yellow",
       "mustard": "Yellow",
-      "navy": "blue",
+      "natural": "Beige, Nude, Brown, White",
+      "navy + mustard": "Blue, Yellow, Orange",
+      "navy": "Blue",
+      "nude": "Beige, Nude",
       "olive": "Olive",
       "onyx": "Blue, Light Blue, White",
       "orange": "Orange",
+      "orchid": "White, Nude, Beige",
       "palm": "Green, Olive",
-      "peach": "Orange, Rose, Pink",
+      "peach": "Orange, Rose, Pink, Yellow",
+      "pearl": "White, Nude",
+      "peridot": "Green",
+      "pine": "Brown, Green",
+      "platinum/ berry/ onyx": "Black, Grey, Red, Burgundy",
+      "platinum/ cocoa/ champagne": "Black, Brown",
+      "plum": "Purple, Burgundy",
+      "pre-order": "Black",
+      "prism print": "Blue, Green, Black",
+      "purple": "Purple",
+      "quartz": "Rose, Pink, Red",
+      "rainbow": "Light Blue, Blue, Turquoise",
+      "raspberry": "Red, Rose, Pink",
+      "rasberry": "Red, Rose, Pink",
+      "rose quartz": "Rose, Pink, Red",
+      "rose slate": "Rose, Pink, Nude",
       "rose": "Rose, Pink",
+      "ruby kiss": "Red, Rose, Purple, Burgundy",
       "ruby wine": "Burgundy, Red",
+      "ruby": "Red, Burgundy",
+      "rust": "Red, Burgundy",
       "sage": "Grey, Green",
       "salt coffee": "Brown",
       "salt slate": "Rose, Pink, White",
       "salt turquoise": "Light Blue",
       "sand": "Brown, Beige",
+      "smoke": "Grey, Black,White",
+      "snake": "Brown, Beige, Black",
+      "summer": "Blue, Green, White, Red, Yellow",
+      "tan / blonde": "Brown, Beige, Gold",
+      "tan ostrich": "Brown, Beige",
       "tan": "Beige, Brown",
       "taupe": "Brown, Grey",
       "teal": "Blue, Green, Light Blue",
+      "teal/cream": "Blue, Green",
       "toast": "Beige, Rose, Yellow",
+      "toffee": "Brown, Beige, Nude",
       "tomato": "Red",
       "tortoise - amber": "Brown",
-      "tortoise": "Brown,Olive,Green,Grey",
+      "tortoise frame - amber lens": "Brown",
+      "tortoise": "Brown, Olive, Green, Grey",
       "turquoise snake": "Light Blue",
       "turquoise": "Light Blue",
       "victorian rose": "Rose, Pink, Red",
-      "vintage navy": "Blue"
+      "vintage navy": "Blue",
+      "vintage tomato": "Red, Burgundy",
+      "violet": "Purple, Burgundy",
+      "wine": "Red, Burgundy"
 
     }
   }
