--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -198,9 +198,7 @@
   "ColorConverter": {
     "IsEnabled": true,
     "DeleteAllFColours": true,
-
-    "SaveResult": false,
-
+    "SaveResult": true,
     "UnknownFile": "results/unknownColors.txt",
     "ResultFile": "results/convertedColors.txt",
 
@@ -228,26 +226,30 @@
     ],
 
     "DirectMapping": {
+
       "amethyst": "Purple",
       "aqua ombre": "Blue, Light Blue, Green",
+      "aqua": "Light Blue, Blue",
+      "aquamarine": "Blue, Light Blue",
       "bamboo": "Brown, Beige",
       "blanco": "White",
       "blonde": "Yellow, Orange, Gold",
-      "blush": "Rose, Nude, Beige, Pink",
+      "blush": "Rose, Pink, Nude",
       "brass": "Brown, Gold",
       "brazilian": "Green, Blue",
       "bronze": "Brown, Gold",
-      "burg": "Black, Blue",
+      "burg": "Black",
       "burgundy": "Burgundy, Red",
       "burnt orange": "Orange, Brown",
-      "camel": "Brown, Yellow, Beige",
+      "camel": "Beige, Brown",
       "cameo rose": "Rose, Pink",
       "canary": "Yellow, Nude, Beige, Orange",
       "caramel": "Orange, Beige, Brown",
       "carbon": "Grey, Black",
       "champagne": "Nude, Beige",
+      "charcoal": "Grey, Black, Blue",
       "chestnut aura": "Brown",
-      "chestnut coffee ombre": "Brown,Beige, Black, Gold",
+      "chestnut coffee ombre": "Brown, Beige, Black",
       "chestnut": "Brown",
       "chocolate": "Brown, Beige",
       "clear - peach": "Orange, Yellow",
@@ -255,6 +257,8 @@
       "clear frame - violet lens": "White",
       "clear": "White",
       "coffee ombre": "Brown, Black, Beige, Gold",
+      "coffee": "Brown, Beige, Black",
+      "cognac": "Brown, Beige, Black",
       "color": "Black,White, Blue, Green, Yellow",
       "cooper": "Brown",
       "coral": "Rose, Red, Orange, Nude",
@@ -271,6 +275,7 @@
       "full": "Black, Blue",
       "fuschia": "Pink, Purple, Red",
       "gray trio": "Grey, Black",
+      "gray": "Grey, Black",
       "gun/rose": "Rose, Pink",
       "gunmetal - gray": "Grey, Black",
       "gunmetal foil": "Blue",
@@ -278,6 +283,7 @@
       "herringbone sartorial": "Grey, Blue",
       "ice": "White, Light Blue",
       "indian summer": "Orange, Gold, Yellow",
+      "ivory": "White, Nude, Beige",
       "kale": "Olive, Green",
       "kara steel": "Light Blue, Black",
       "khaki": "Beige, Brown",
@@ -295,7 +301,7 @@
       "multi": "Blue, Green, Red, Yellow",
       "multicolor": "Blue, Green, Red, Yellow",
       "mustard": "Yellow",
-      "natural": "Beige, Nude, Brown, White",
+      "natural": "Beige, Nude, Brown",
       "navy + mustard": "Blue, Yellow, Orange",
       "navy": "Blue",
       "nude": "Beige, Nude",
@@ -304,7 +310,7 @@
       "orange": "Orange",
       "orchid": "White, Nude, Beige",
       "palm": "Green, Olive",
-      "peach": "Orange, Rose, Pink, Yellow",
+      "peach": "Orange, Yellow, Rose",
       "pearl": "White, Nude",
       "peridot": "Green",
       "pine": "Brown, Green",
@@ -318,6 +324,7 @@
       "rainbow": "Light Blue, Blue, Turquoise",
       "rasberry": "Red, Rose, Pink",
       "raspberry": "Red, Rose, Pink",
+      "rose drift": "Pink, Rose",
       "rose quartz": "Rose, Pink, Red",
       "rose slate": "Rose, Pink, Nude",
       "rose": "Rose, Pink",
