только US размеры

--- a/converter/Converter/appsettings.json
+++ b/converter/Converter/appsettings.json
@@ -18,7 +18,7 @@
 
 
   "SizeConverter": {
-    "IsEnabled": false,
+    "IsEnabled": true,
     "DeleteAllFSizes": true,
 
     "SaveResult": true,
@@ -122,6 +122,7 @@
     "DirectMapping": {
       "one size fits all": "one size",
       "one size": "one size",
+      "nosize": "one size",
       "x-large": "xl",
       "large": "l",
       "medium": "m",
@@ -196,7 +197,7 @@
 
 
   "ColorConverter": {
-    "IsEnabled": true,
+    "IsEnabled": false,
     "DeleteAllFColours": true,
     "SaveResult": true,
     "UnknownFile": "results/unknownColors.txt",
